mir wechlse zu overleaf

--- a/main.tex
+++ b/main.tex
@@ -8,8 +8,8 @@
 \usepackage[utf8x]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{booktabs}
-\usepackage{algorithmicx}
-\usepackage{algpseudocode}
+
+
 \usepackage{color,soul}
 \usepackage{multicol}
 \usepackage{amsmath}
@@ -55,15 +55,81 @@ numberstyle = \tiny,
 \end{center}
 
 \tableofcontents
+\newpage
 
-    \newpage
-    \input{Chapters/Chapter00.tex}
-    \input{Chapters/Chapter01.tex}
-    \input{Chapters/Chapter02.tex}
-    \input{Chapters/Chapter03.tex}
-    \input{Chapters/Chapter04.tex}
-    \input{Chapters/Chapter05.tex}
-    \input{Chapters/Chapter06.tex}
+%%Chapter 00
+\section{Vorwort}
+%%Chapter 01
+\section{Mathematische Grundlagen}
+    \subsection{Induktion}
+%%Chapter 02
+\section{Suchen und Sortieren}
+
+\subsection{Suchen in Arrays}
+
+\subsection{Sortier-Algorithmen}
+
+    \subsubsection{Bubblesort}\label{alg:Bubblesort}
+
+
+    \subsubsection{Heapsort}\label{alg:Heapsort}
+
+
+
+    \subsubsection{Mergesort}\label{alg:Mergesort}
+
+
+
+    \subsubsection{Quicksort}\label{alg:Quicksort}
+
+
+%%Chapter 03
+\section{Dynamisches Programmieren}
+
+\subsection{Längste aufsteigende Teilfolge}
+
+\subsection{Längste gemeinsame Teilfolge}
+
+\subsection{Minimale Editierdistanz}
+
+\subsection{Matrixkettenmultiplikation}
+
+\subsection{Subset Sum Problem}
+
+\subsection{Knap Sack Problem}
+
+%%Chapter 04
+\section{Datenstrukturen}
+
+\subsection{AVL-Bäume}
+
+
+%%Chapter 05
+\section{GraphenTheorie}
+
+\subsection{Grundlagen}
+
+\subsection{Tiefensuche}
+
+\subsection{Breitensuche}
+
+\subsection{Zusammenhangskompontente}
+
+\subsection{Shortest-path...}
+
+\subsubsection{...mit uniformen Kantengewichten}
+
+\subsubsection{...mit nicht-negativen Kantengewichten}
+
+\subsubsection{...mit allgemeinen Kantengewichten}
+
+\subsubsection{...zwischen allen Paaren von Knoten}
+
+
+
+%%Chapter 06
+\section{Sprachunterschiede}
+
 
 
 
